# SoftArchLab1

./: Dockerfile  README.md  compose.yaml  compose.yml
consul/: Dockerfile  consul.sh
facade/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile
facade/src/: main.cpp  main.rs
hazelcast-client/: CMakeLists.txt  Dockerfile
hazelcast-client/src/: locks_main.cpp  main.cpp  queue_r_main.cpp  queue_w_main.cpp
logging/: CMakeLists.txt  Cargo.toml  Dockerfile
logging/src/: main.cpp  main.rs
message/: CMakeLists.txt  Cargo.toml  Dockerfile
message/src/: main.cpp  main.rs
microservices/: Cargo.toml
microservices/src/: main.rs
