[package]
name = "facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
uuid = { version = "1.7.0", features = ["v4"]}
serde_json = "1.0.113"